@@ -66,3 +66,4 @@ Version 1.18 (unreleased)
 -------------------------
 * Replace global $newsConfig with icms_getConfig('configname', 'news') in class files.
 * Calculate document root, allows lead images to be displayed correctly if install is in a subdirectory.
+* Removed calls to Sprockets methods getTagId() and getItemId() which are redundant and have been removed. 
